<resources>
    <string name="app_name">Movies</string>
    <string name="movies_title">Movies</string>
    <string name="favorite_movies_title">Favorites</string>
    <string name="detail_movie_title">Details</string>
    <string name="error_internet">Check your internet connection</string>
    <string name="not_action_view">There is no application that could open the movie</string>
    <string name="top_rated">The most rated</string>
    <string name="popularity">The most popular</string>
    <string name="item_favourite">Favourites</string>
    <string name="tv_info_label_title">Title:</string>
    <string name="tv_info_label_original">Original title:</string>
    <string name="tv_info_label_rating">Rating:</string>
    <string name="tv_info_label_release_date">Release date:</string>
    <string name="tv_info_label_description">Description:</string>
</resources>