<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph"
    app:startDestination="@id/movies">

    <fragment
        android:id="@+id/movies"
        android:name="android.example.feature_movies_screen.presentation.screen.Movies"
        android:label="@string/movies_title"
        tools:layout="@layout/movies">
        <action
            android:id="@id/action_movies_to_detailsMovie"
            app:destination="@id/detailsMovie" />
    </fragment>

    <fragment
        android:id="@+id/favouriteMovies"
        android:name="android.example.feature_favourite_movies_screen.presentation.screen.FavouriteMovies"
        android:label="@string/favorite_movies_title"
        tools:layout="@layout/favourite_movies">
        <action
            android:id="@+id/action_favouriteMovies_to_detailMovie"
            app:destination="@id/detailsMovie" />
    </fragment>

    <fragment
        android:id="@+id/detailsMovie"
        android:name="android.example.feature_details_movie_screen.presentation.screen.DetailsMovie"
        android:label="@string/detail_movie_title"
        tools:layout="@layout/details_movie" />
</navigation>