<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoLabelStyle"
        android:id="@+id/tvLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_info_label_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoStyle"
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoLabelStyle"
        android:id="@+id/tvLabelTitleOriginal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_info_label_original"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoStyle"
        android:id="@+id/tvTitleOriginal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="TextView" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoLabelStyle"
        android:id="@+id/tvLabelRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_info_label_rating"
        app:layout_constraintEnd_toEndOf="@id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelTitleOriginal" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoStyle"
        android:id="@+id/tvRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOriginal"
        tools:text="TextView" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoLabelStyle"
        android:id="@+id/tvLabelReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_info_label_release_date"
        app:layout_constraintEnd_toEndOf="@id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelRating" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoStyle"
        android:id="@+id/tvReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/tvRating"
        tools:text="TextView" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tvInfoLabelStyle"
        android:id="@+id/tvLabelDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_info_label_description"
        app:layout_constraintEnd_toEndOf="@id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelReleaseDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        style="@style/tvInfoStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelDescription"
        tools:text="TextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVideos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvVideos" />

</androidx.constraintlayout.widget.ConstraintLayout>